[tool.poetry]
name = "twitter_bot"
version = "0.1.0"
description = ""
authors = ["Taiki <taiki.iwahori.bn@furuno.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^3.10.0"
black = "^21.8b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
