[tool.poetry]
name = "twitter_bot"
version = "0.1.0"
description = ""
authors = ["Taiki <taiki.iwahori.bn@furuno.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^3.10.0"
black = "^21.8b0"
pandas = "^1.3.3"
plotly = "^5.3.1"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
